 * Don't select items by pressing the left mouse button and moving the cursor.
 * Don't drag items while the middle mouse button is pressed.
 * Added "application/x-xz" to and removed "application/x-bzip" from the supported extractions.
 * Added a workaround for Qt's problem with scrolling to deep nonexpanded tree items.
 * Always expand the first header column to fill the available width.

V0.7.0
--------
 * Handle newlines and text tabs in item names as far as possible.
 * Natural sorting of items by treating dot as a separator.
 * Set the window title to the archive name.
 * Added context menu to the archive path bar for copying path and opening containing folder.
 * Use 7z for uncompressed disk images and bsdtar for compressed ones.
 * Added fallback icons for files and folders.
 * Fixed emblemized icons with device pixel ratio.

V0.6.1
--------
 * Added read-only support for RAR archives through 7z.

V0.6.0
--------
 * Added an option to (not) stretch the first column.
 * Added app icon.
 * A workaround for a Qt bug that might give a too small height to rows if the horizontal scrollbar isn't at its minimum value when items are removed.
 * Better names for extraction folders of archives without parent directories.
 * Scroll to the current item when expanding or filtering.
 * Fixed startup invisibility with some window managers.
 * Updated the code for Qt 5.15.

V0.5.0
---------
 * Added read-only support for MS Windows packages through 7z.
 * Accept 7z lists without Date and Time (may happen with MS Windows packages).
 * Added read-only support for Android packages through bsdtar.
 * Reset the GUI if the archive's password isn't entered (correctly).
 * Speed up listing by using static regexes.
 * Handle relative file paths correctly.

V0.4.0
---------
 * Added support for Zstd (because tar supports it).
 * Allow stopping (killing) long processes.
 * Prevent DND when the backend is busy.
 * Smooth scrolling when the mouse wheel turns inside the view.