@@ -1,5 +1,5 @@
 /*
- * Copyright (C) Pedram Pourang (aka Tsu Jan) 2018-2020 <tsujan2000@gmail.com>
+ * Copyright (C) Pedram Pourang (aka Tsu Jan) 2018-2021 <tsujan2000@gmail.com>
  *
  * Arqiver is free software: you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the
@@ -643,7 +643,7 @@ QString Backend::extractSingleFile(const QString& path) {
       dir.mkpath(arqiverDir_);
   }
   QString fileName = (arqiverDir_.isEmpty() ? QDateTime::currentDateTime().toString("yyyyMMddhhmmss")
-                                          : parentDir + "/")
+                                            : parentDir + "/")
                      + realPath.section("/",-1);
   QFile file(fileName);
   bool fileExists(file.exists());
